# go/router/router.go
@@ -1,7 +1,6 @@
 package router
 
 import (
-	"encoding/json"
 	"net/http"
 	"voting-system/router/routes"
 
@@ -10,15 +9,12 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/cors"
-	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 func Router() http.Handler {
 	router := chi.NewRouter()
 
-	router.Use(middleware.Logger)
-
-	router.Use(middleware.Recoverer)
+	router.Use(middleware.Logger, middleware.Recoverer)
 
 	router.Use(cors.Handler(cors.Options{
 		AllowedOrigins:   []string{"https://*", "http://*"},
@@ -31,17 +27,12 @@ func Router() http.Handler {
 
 	router.Mount("/", routes.AuthenticationRoutes())
 
-	router.Mount("/users", routes.UsersRoutes())
+	router.Mount("/elections", routes.ElectionsRoutes())
 
-	router.Get("/health", func(w http.ResponseWriter, r *http.Request) {
+	router.Get("/swagger", func(w http.ResponseWriter, r *http.Request) {
 		w.Header().Set("Content-Type", "application/json")
-		w.WriteHeader(http.StatusOK)
-		json.NewEncoder(w).Encode(map[string]string{"status": "ok"})
+		http.ServeFile(w, r, "swagger.json")
 	})
-
-	router.Get("/swagger/*", httpSwagger.Handler(
-		httpSwagger.URL("swagger/doc.json"),
-	))
 
 	return router
 }
